set(dsms_SOURCES
        include/common/aggr.h
        include/common/constants.h
        include/common/debug.h
        include/common/op.h
        include/common/sys_stream.h
        include/common/types.h
        include/common/window.h
        include/execution/indexes/hash_index.h
        include/execution/indexes/index.h
        include/execution/internals/aeval.h
        include/execution/internals/beval.h
        include/execution/internals/eval_context.h
        include/execution/internals/filter_iter.h
        include/execution/internals/heval.h
        include/execution/internals/tuple.h
        include/execution/internals/tuple_iter.h
        include/execution/memory/memory_mgr.h
        include/execution/monitors/join_monitor.h
        include/execution/monitors/op_monitor.h
        include/execution/monitors/property.h
        include/execution/monitors/property_monitor.h
        include/execution/monitors/queue_monitor.h
        include/execution/monitors/store_monitor.h
        include/execution/monitors/syn_monitor.h
        include/execution/monitors/timer.h
        include/execution/operators/bin_join.h
        include/execution/operators/bin_str_join.h
        include/execution/operators/distinct.h
        include/execution/operators/dstream.h
        include/execution/operators/except.h
        include/execution/operators/group_aggr.h
        include/execution/operators/istream.h
        include/execution/operators/operator.h
        include/execution/operators/output.h
        include/execution/operators/partn_win.h
        include/execution/operators/project.h
        include/execution/operators/range_win.h
        include/execution/operators/rel_source.h
        include/execution/operators/row_win.h
        include/execution/operators/rstream.h
        include/execution/operators/select.h
        include/execution/operators/sink.h
        include/execution/operators/stream_source.h
        include/execution/operators/sys_stream_gen.h
        include/execution/operators/union.h
        include/execution/queues/element.h
        include/execution/queues/queue.h
        include/execution/queues/shared_queue_reader.h
        include/execution/queues/shared_queue_writer.h
        include/execution/queues/simple_queue.h
        include/execution/scheduler/scheduler.h
        include/execution/scheduler/chain.h
        include/execution/scheduler/round_robin.h
        include/execution/stores/lin_store.h
        include/execution/stores/lin_store_impl.h
        include/execution/stores/pwin_store.h
        include/execution/stores/pwin_store_impl.h
        include/execution/stores/rel_store.h
        include/execution/stores/rel_store_impl.h
        include/execution/stores/simple_store.h
        include/execution/stores/store_alloc.h
        include/execution/stores/win_store.h
        include/execution/stores/win_store_impl.h
        include/execution/synopses/lin_syn.h
        include/execution/synopses/lin_syn_impl.h
        include/execution/synopses/partn_win_syn.h
        include/execution/synopses/partn_win_syn_impl.h
        include/execution/synopses/rel_syn.h
        include/execution/synopses/rel_syn_impl.h
        include/execution/synopses/win_syn.h
        include/execution/synopses/win_syn_impl.h
        include/interface/error.h
        include/interface/memory_source.h
        include/interface/query_output.h
        include/interface/server.h
        include/interface/table_source.h
        include/metadata/phy_op.h
        include/metadata/phy_op_debug.h
        include/metadata/phy_queue.h
        include/metadata/phy_store.h
        include/metadata/phy_syn.h
        include/metadata/plan_mgr.h
        include/metadata/plan_mgr_impl.h
        include/metadata/query_mgr.h
        include/metadata/static_tuple_alloc.h
        include/metadata/table_mgr.h
        include/metadata/tuple_layout.h
        include/parser/nodes.h
        include/parser/nodes_debug.h
        include/parser/parser.h
        include/parser/scan.h
        include/querygen/log_plan_gen.h
        include/querygen/logop.h
        include/querygen/logop_debug.h
        include/querygen/query.h
        include/querygen/query_debug.h
        include/querygen/sem_interp.h
        include/server/config_file_reader.h
        include/server/params.h
        include/server/server_impl.h
        src/common/aggr.cc
        src/execution/indexes/hash_index.cc
        src/execution/internals/aeval.cc
        src/execution/internals/beval.cc
        src/execution/internals/eval_context.cc
        src/execution/internals/filter_iter.cc
        src/execution/internals/heval.cc
        src/execution/memory/memory_mgr.cc
        src/execution/monitors/join_monitor.cc
        src/execution/monitors/op_monitor.cc
        src/execution/monitors/property_monitor.cc
        src/execution/monitors/queue_monitor.cc
        src/execution/monitors/store_monitor.cc
        src/execution/monitors/syn_monitor.cc
        src/execution/monitors/timer.cc
        src/execution/operators/bin_join.cc
        src/execution/operators/bin_str_join.cc
        src/execution/operators/distinct.cc
        src/execution/operators/dstream.cc
        src/execution/operators/except.cc
        src/execution/operators/group_aggr.cc
        src/execution/operators/istream.cc
        src/execution/operators/output.cc
        src/execution/operators/partn_win.cc
        src/execution/operators/project.cc
        src/execution/operators/range_win.cc
        src/execution/operators/rel_source.cc
        src/execution/operators/row_win.cc
        src/execution/operators/rstream.cc
        src/execution/operators/select.cc
        src/execution/operators/sink.cc
        src/execution/operators/stream_source.cc
        src/execution/operators/sys_stream_gen.cc
        src/execution/operators/union.cc
        src/execution/queues/shared_queue_reader.cc
        src/execution/queues/shared_queue_writer.cc
        src/execution/queues/simple_queue.cc
        src/execution/scheduler/round_robin.cc
        src/execution/stores/lin_store_impl.cc
        src/execution/stores/pwin_store_impl.cc
        src/execution/stores/rel_store_impl.cc
        src/execution/stores/simple_store.cc
        src/execution/stores/win_store_impl.cc
        src/execution/synopses/lin_syn_impl.cc
        src/execution/synopses/partn_win_syn_impl.cc
        src/execution/synopses/rel_syn_impl.cc
        src/execution/synopses/win_syn_impl.cc
        src/interface/server.cc
        src/metadata/gen_phy_plan.cc
        src/metadata/gen_xml_plan.cc
        src/metadata/inst_aggr.cc
        src/metadata/inst_dist.cc
        src/metadata/inst_except.cc
        src/metadata/inst_expr.cc
        src/metadata/inst_join.cc
        src/metadata/inst_lin_store.cc
        src/metadata/inst_output.cc
        src/metadata/inst_project.cc
        src/metadata/inst_pwin.cc
        src/metadata/inst_pwin_store.cc
        src/metadata/inst_range_win.cc
        src/metadata/inst_rel_source.cc
        src/metadata/inst_rel_store.cc
        src/metadata/inst_row_win.cc
        src/metadata/inst_rstream.cc
        src/metadata/inst_select.cc
        src/metadata/inst_simple_store.cc
        src/metadata/inst_sink.cc
        src/metadata/inst_ss_gen.cc
        src/metadata/inst_str_join.cc
        src/metadata/inst_str_source.cc
        src/metadata/inst_union.cc
        src/metadata/inst_win_store.cc
        src/metadata/inst_xstream.cc
        src/metadata/phy_op_debug.cc
        src/metadata/plan_inst.cc
        src/metadata/plan_mgr.cc
        src/metadata/plan_mgr_impl.cc
        src/metadata/plan_mgr_monitor.cc
        src/metadata/plan_queue.cc
        src/metadata/plan_store.cc
        src/metadata/plan_syn.cc
        src/metadata/plan_trans.cc
        src/metadata/query_mgr.cc
        src/metadata/static_tuple_alloc.cc
        src/metadata/table_mgr.cc
        src/metadata/tuple_layout.cc
        src/parser/nodes.cc
        src/parser/parse.cc
        src/parser/parse.h
        src/parser/parse.yy
        src/parser/scan.cc
        src/parser/scan.ll
        src/parser/scanhelp.cc
        src/querygen/log_naive_plan_gen.cc
        src/querygen/log_plan_gen.cc
        src/querygen/logexpr.cc
        src/querygen/logop.cc
        src/querygen/logop_debug.cc
        src/querygen/query_debug.cc
        src/querygen/sem_interp.cc
        src/server/config_file_reader.cc
        src/server/server_impl.cc)

add_library(dsms SHARED ${dsms_SOURCES})
target_include_directories(dsms PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)